[package]
name = "wwpasswd"
version = "1.0.0"
authors = ["Solra Bizna <solra@bizna.name>"]
edition = "2018"
description = "A small, interactive utility that hashes a password for use in the WW project management system"
readme = "README.md"
repository = "https://github.com/SolraBizna/wwpasswd"
license = "Unlicense"

[dependencies]
rand = "0.7"
lsx = {version = "1.1", default-features = false, features = ["sha256"]}
base64 = "0.8"
dialog = "0.3"
